# git-hired

./: .gitignore  README.md  gitfiti.py  main.py  pyproject.toml
