[tool.poetry]
name = "git-hired"
version = "0.1.0"
description = ""
authors = ["MattNotarangelo <matt.notarangelo1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
